--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <description>MicroservicesAndDistributedSystems</description>
     <modules>
         <module>Customer</module>
+        <module>Fraud</module>
     </modules>
     <properties>
         <java.version>17</java.version>
