--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,13 @@
     <modules>
         <module>Customer</module>
         <module>Fraud</module>
+        <module>eureka-service-discovery</module>
     </modules>
     <properties>
         <java.version>17</java.version>
-        <spring.boot.maven.plugin.version>3.4.0</spring.boot.maven.plugin.version>
-        <spring.boot.dependecies.version>3.4.0</spring.boot.dependecies.version>
+        <spring.boot.maven.plugin.version>3.4.3</spring.boot.maven.plugin.version>
+        <spring.boot.dependecies.version>3.4.3</spring.boot.dependecies.version>
+        <spring-cloud.version>2024.0.1</spring-cloud.version>
     </properties>
 
     <dependencyManagement>
@@ -33,7 +35,15 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <dependencies>
