--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>Customer</module>
         <module>Fraud</module>
         <module>eureka-service-discovery</module>
+        <module>clients</module>
     </modules>
     <properties>
         <java.version>17</java.version>
@@ -56,6 +57,10 @@
                 <artifactId>spring-boot-starter-test</artifactId>
                 <scope>test</scope>
             </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
