Create a notification microservice that help us us to create a notification when we create a customer

--- a/clients/pom.xml
+++ b/clients/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.clients.fraud</groupId>
+    <groupId>com.clients</groupId>
     <artifactId>clients</artifactId>
 
     <properties>
