--- a/Fraud/pom.xml
+++ b/Fraud/pom.xml
@@ -37,7 +37,7 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.clients.fraud</groupId>
+            <groupId>com.clients</groupId>
             <artifactId>clients</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
