--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>Fraud</module>
         <module>eureka-service-discovery</module>
         <module>clients</module>
+        <module>notification</module>
     </modules>
     <properties>
         <java.version>17</java.version>
