--- a/Fraud/src/main/resources/application.yml
+++ b/Fraud/src/main/resources/application.yml
@@ -23,3 +23,8 @@ eureka:
       defaultZone: http://localhost:8761/eureka
       fetch-registry: false
       register-with-eureka: true
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
