--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -24,4 +24,7 @@ eureka:
       fetch-registry: false
       register-with-eureka: true
 
-
+management:
+  tracing:
+    sampling:
+      probability: 1.0
