--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <spring.boot.maven.plugin.version>3.4.3</spring.boot.maven.plugin.version>
         <spring.boot.dependecies.version>3.4.3</spring.boot.dependecies.version>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
+        <micrometer.version>1.3.11</micrometer.version>
     </properties>
 
     <dependencyManagement>
@@ -41,6 +42,13 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.micrometer</groupId>
+                <artifactId>micrometer-tracing-bom</artifactId>
+                <version>${micrometer.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
