--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>eureka-service-discovery</module>
         <module>clients</module>
         <module>notification</module>
+        <module>ApiGateway</module>
     </modules>
     <properties>
         <java.version>17</java.version>
