rabbit MQ: add a Producer Message exchange. queue and the consummer

--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: 'true'
+  rabbitmq:
+    addresses: localhost:5672
+
 
 server:
   port: 8086
@@ -28,3 +31,14 @@ management:
   tracing:
     sampling:
       probability: 1.0
+
+
+
+rabbitmq:
+  exchanges:
+    internal: internal.exchange
+  queue:
+    notification: notification.queue
+  routing-keys:
+    internal-notification: internal.notification.routing-key
+
