--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -57,6 +57,15 @@
             <artifactId>clients</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.example.rabbitmq</groupId>
+            <artifactId>rabbitmq-config</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
