--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>clients</module>
         <module>notification</module>
         <module>ApiGateway</module>
+        <module>rabbitmq</module>
     </modules>
     <properties>
         <java.version>17</java.version>
