--- a/Customer/pom.xml
+++ b/Customer/pom.xml
@@ -11,12 +11,16 @@
 
     <groupId>com.customer</groupId>
     <artifactId>Customer</artifactId>
+    <packaging>jar</packaging>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
@@ -67,8 +71,8 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.example.rabbitmq</groupId>
-            <artifactId>rabbitmq-config</artifactId>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>rabbitmq</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
