--- a/clients/pom.xml
+++ b/clients/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>com.clients</groupId>
     <artifactId>clients</artifactId>
+    <packaging>jar</packaging>
 
     <build>
         <plugins>
