packaging jar to docker image

--- a/ApiGateway/pom.xml
+++ b/ApiGateway/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>com.apigateway</groupId>
-    <artifactId>ApiGateway</artifactId>
+    <artifactId>apigateway</artifactId>
     <packaging>jar</packaging>
 
     <build>
@@ -21,6 +21,20 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+             <id>build-docker-image</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
