--- a/Customer/pom.xml
+++ b/Customer/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>com.customer</groupId>
-    <artifactId>Customer</artifactId>
+    <artifactId>customer</artifactId>
     <packaging>jar</packaging>
 
     <build>
@@ -21,6 +21,20 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>build-docker-image</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
