--- a/Fraud/src/main/resources/application-dev.yml
+++ b/Fraud/src/main/resources/application-dev.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   application:
-    name: Customer
+    name: fraud
   datasource:
     username: houssam
-    url: jdbc:postgresql://localhost:1234/customer
+    url: jdbc:postgresql://db:5432/fraud
     password: houssam
   jpa:
     properties:
@@ -16,20 +16,18 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: 'true'
-  rabbitmq:
-    addresses: localhost:5672
 
 eureka:
-  instance:
-    prefer-ip-address: true
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
-      fetch-registry: true
+      defaultZone: http://eureka-server:8761/eureka
+      fetch-registry: false
       register-with-eureka: true
 
 management:
+  zipkin:
+    tracing:
+      endpoint: http://zipkin:9411/api/v2/spans
   tracing:
     sampling:
       probability: 1.0
