--- a/k8s/minikube/services/notification/service.yml
+++ b/k8s/minikube/services/notification/service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: db
+  name: notification
 spec:
   selector:
-    app: postgres
+    app: notification
   ports:
-    - port: 5432
-      targetPort: 5432
+    - port: 80
+      targetPort: 8086
   type: ClusterIP
